limpieza proyecto base

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,11 +29,7 @@
         {{textoError}}
       </div>
 
-
-      <ngx-spinner bdOpacity = 0.9  bdColor = "#333"   size = "medium"
-            color = "#fff"
-            type = "square-spin"
-            [fullScreen] = "true"  >
-            <p style="color: white" > Ingresando al sistema... </p>
+        <ngx-spinner bdOpacity=0.9 bdColor="#fff" size="medium" color="grey" type="ball-spin" [fullScreen]="false">
+            <p style="color: white"> Ingresando al sistema... </p>
         </ngx-spinner>
 </div>
