--- a/src/app/inscripcion/inscripcion.component.html
+++ b/src/app/inscripcion/inscripcion.component.html
@@ -1,36 +1,35 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-sm-6">
+
+            <form [formGroup]="formularioInscripcion">
+                <div class="from-control">
+                    <label for="">Fecha Creación</label>
+                    <input formControlName="fecha_creacion" class="form-control" type="text" >
+                </div>
+                <div class="from-control">
+                    <label for="">Fecha de Entrega</label>
+                    <input formControlName="fecha_entrega" class="form-control" type="text" >
+                </div>
+    
+                <div class="from-control">
+                    <label for="">Nombre del Responsable</label>
+                    <input formControlName="nombre_responsable" class="form-control" type="text" >
+                </div>
+    
+                <div class="from-control">
+                    <label for="">Descripción</label>
+                    <input formControlName="descripcion" class="form-control"  type="text" >
+                </div>
+
+                <br>
+            <button class="btn btn-primary" (click)="guardar()" [disabled]="!formularioInscripcion.valid" >Guardar</button>
+
+            </form>
           
-          
+            
 
-            <div class="from-control">
-                <label for="">Fecha Inicio</label>
-                <input class="form-control" [value]="inscripcion.fecha | date" type="text" disabled>
-            </div>
-            <div class="from-control">
-                <label for="">Fecha Finaliza</label>
-                <input class="form-control" [value]="inscripcion.fechaFinal | date" type="text" disabled>
-            </div>
-
-            <div class="from-control">
-                <label for="">Sub Total</label>
-                <input class="form-control" [value]="inscripcion.subTotal" type="number" disabled>
-            </div>
-
-            <div class="from-control">
-                <label for="">ISV</label>
-                <input class="form-control" [value]="inscripcion.isv" type="number" disabled>
-            </div>
-
-            <div class="from-control">
-                <label for="">Total</label>
-                <input class="form-control" [value]="inscripcion.total" type="number" disabled>
-            </div>
-
-            <br>
-        
-            <button class="btn btn-primary" (click)="guardar()">Guardar</button>
+            
         </div>
        
     </div>
