--- a/src/app/listado-inscripciones/listado-inscripciones.component.html
+++ b/src/app/listado-inscripciones/listado-inscripciones.component.html
@@ -3,20 +3,20 @@
     <table class="table">
         <thead>
           <tr>
-            <th scope="col">Cliente</th>
-            <th scope="col">Fecha de Incio</th>
-            <th scope="col">Fecha Final</th>
-            <th scope="col">Imagen</th>
+            <th scope="col">Fecha de Creación</th>
+            <th scope="col">Fecha Comprometida</th>
+            <th scope="col">Nombre Responsable</th>
+            <th scope="col">Descripción</th>
+            
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let inscripcion of inscripciones">
-            <th scope="row">{{inscripcion.clienteObtenido.nombre}} {{inscripcion.clienteObtenido.apellido}}</th>
-            <td>{{inscripcion.fecha | date}}</td>
-            <td>{{inscripcion.fechaFinal | date}}</td>
-            <td>
-              <img width="50px" [src]="inscripcion.clienteObtenido.imgUrl" alt="">
-            </td>
+            <td>{{inscripcion.fecha_creacion | date}}</td>
+            <td>{{inscripcion.fecha_entrega | date}}</td>
+            <td>{{inscripcion.nombre_responsable }}</td>
+            <td>{{inscripcion.descripcion }}</td>
+            
           </tr>
 
         </tbody>
