spinner en listado de compromisos

--- a/src/app/listado-inscripciones/listado-inscripciones.component.html
+++ b/src/app/listado-inscripciones/listado-inscripciones.component.html
@@ -22,3 +22,6 @@
         </tbody>
       </table>
 </div>
+<ngx-spinner bdOpacity=0.9 bdColor="#fff" size="medium" color="grey" type="ball-spin" [fullScreen]="false">
+  <p style="color: white"> Cargando listado de compromisos... </p>
+</ngx-spinner>
