instalacion de material

--- a/src/app/inscripcion/inscripcion.component.html
+++ b/src/app/inscripcion/inscripcion.component.html
@@ -3,10 +3,10 @@
         <div class="col-sm-6">
 
             <form [formGroup]="formularioInscripcion">
-                <div class="from-control">
+                <!-- <div class="from-control">
                     <label for="">Fecha Creación</label>
                     <input formControlName="fecha_creacion" class="form-control" type="text" >
-                </div>
+                </div> -->
                 <div class="from-control">
                     <label for="">Fecha de Entrega</label>
                     <input formControlName="fecha_entrega" class="form-control" type="text" >
