--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,7 @@
 <div *ngIf="usuario && !cargando; else showLogin">
-    <app-encabezado></app-encabezado>
-    <router-outlet></router-outlet>
-
+    <app-nav></app-nav>
 </div>
-
-
-
 <ng-template #showLogin>
-  <div *ngIf="cargando" class="text-center"> 
-    <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
-  </div>
+  
   <app-login  *ngIf="!cargando"></app-login>
 </ng-template>
-
-
-
