--- a/src/app/inscripcion/inscripcion.component.scss
+++ b/src/app/inscripcion/inscripcion.component.scss
@@ -2,3 +2,13 @@
     width: 200px;
     height: 200px;
 }
+
+.formulario{
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+}
+
+.formulario > * {
+    width: 100%;
+  }
